--- a/UI/Base.lproj/ResultsWindow.xib
+++ b/UI/Base.lproj/ResultsWindow.xib
@@ -8,10 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ResultsWindowController">
             <connections>
-                <outlet property="closeButton" destination="HZZ-Es-mpy" id="iNf-tf-ebo"/>
                 <outlet property="detailsLabel" destination="JfW-zc-kbJ" id="iA0-1v-ura"/>
-                <outlet property="submissionActivityIndicator" destination="YES-az-MHy" id="OwE-pd-uMM"/>
-                <outlet property="submissionStatus" destination="OSm-xS-Dmd" id="hzu-aw-y0v"/>
                 <outlet property="submitToVT" destination="Czs-Di-8Qw" id="xZ3-nN-BNi"/>
                 <outlet property="vtDetailsLabel" destination="kMk-T5-yaD" id="HmI-m6-Pnv"/>
                 <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
@@ -19,30 +16,21 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
+        <window title="KnockKnock" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" texturedBackground="YES"/>
-            <rect key="contentRect" x="196" y="240" width="588" height="295"/>
+            <rect key="contentRect" x="196" y="240" width="588" height="198"/>
             <rect key="screenRect" x="0.0" y="0.0" width="3440" height="1415"/>
             <view key="contentView" id="se5-gp-TjO">
-                <rect key="frame" x="0.0" y="0.0" width="588" height="295"/>
+                <rect key="frame" x="0.0" y="0.0" width="588" height="198"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lEv-Wj-6S5">
-                        <rect key="frame" x="11" y="119" width="121" height="133"/>
+                        <rect key="frame" x="11" y="22" width="121" height="133"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="kkIcon" id="xKf-GK-m0k"/>
                     </imageView>
-                    <textField hidden="YES" focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OSm-xS-Dmd">
-                        <rect key="frame" x="58" y="49" width="512" height="64"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="left" title="Submission Results..." id="bBK-v0-ypq">
-                            <font key="font" size="14" name="Menlo-Regular"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JfW-zc-kbJ">
-                        <rect key="frame" x="133" y="191" width="405" height="46"/>
+                        <rect key="frame" x="133" y="93" width="405" height="46"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Results..." id="c7T-S9-D47">
                             <font key="font" size="16" name="Menlo-Regular"/>
@@ -51,7 +39,7 @@
                         </textFieldCell>
                     </textField>
                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kMk-T5-yaD">
-                        <rect key="frame" x="133" y="133" width="241" height="57"/>
+                        <rect key="frame" x="133" y="20" width="437" height="81"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="VirusTotal:" id="ivf-fv-SFp">
                             <font key="font" size="16" name="Menlo-Regular"/>
@@ -60,7 +48,7 @@
                         </textFieldCell>
                     </textField>
                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h9d-xm-5lM">
-                        <rect key="frame" x="18" y="247" width="350" height="36"/>
+                        <rect key="frame" x="18" y="150" width="350" height="36"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Scan Complete" id="viG-9e-1Nj">
                             <font key="font" size="30" name="Menlo-Bold"/>
@@ -68,39 +56,23 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <progressIndicator fixedFrame="YES" maxValue="100" displayedWhenStopped="NO" indeterminate="YES" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="YES-az-MHy">
-                        <rect key="frame" x="20" y="89" width="32" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    </progressIndicator>
                     <button hidden="YES" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Czs-Di-8Qw">
-                        <rect key="frame" x="368" y="124" width="207" height="32"/>
+                        <rect key="frame" x="388" y="23" width="168" height="33"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="push" title="Submit (Unknown) Items" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="71T-dO-S3a">
+                        <buttonCell key="cell" type="push" title="View/Submit Items" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="71T-dO-S3a">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" size="13" name="Menlo-Regular"/>
                         </buttonCell>
                         <connections>
-                            <action selector="submitToVT:" target="-2" id="8u9-zJ-CMA"/>
-                        </connections>
-                    </button>
-                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HZZ-Es-mpy">
-                        <rect key="frame" x="247" y="12" width="94" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <buttonCell key="cell" type="push" title="Close" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="J9x-sM-h9S">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" size="13" name="Menlo-Regular"/>
-                        </buttonCell>
-                        <connections>
-                            <action selector="close:" target="-2" id="uMS-EM-Wl2"/>
+                            <action selector="viewUnknownItems:" target="-2" id="clO-bS-nuR"/>
                         </connections>
                     </button>
                 </subviews>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
-                <outlet property="initialFirstResponder" destination="HZZ-Es-mpy" id="dm3-Gf-qfl"/>
             </connections>
-            <point key="canvasLocation" x="401" y="331.5"/>
+            <point key="canvasLocation" x="401" y="283"/>
         </window>
     </objects>
     <resources>
