--- a/UI/Base.lproj/PrefsWindow.xib
+++ b/UI/Base.lproj/PrefsWindow.xib
@@ -23,7 +23,7 @@
         <window title="KnockKnock Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" texturedBackground="YES"/>
             <rect key="contentRect" x="196" y="240" width="565" height="310"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="769"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="3440" height="1409"/>
             <view key="contentView" id="se5-gp-TjO">
                 <rect key="frame" x="0.0" y="0.0" width="565" height="310"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -126,7 +126,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" selectable="YES" id="Nua-Eb-VTm">
                         <font key="font" size="11" name="Menlo-Regular"/>
-                        <string key="title">Enter your personal VirusTotal API. 
+                        <string key="title">Enter your personal VirusTotal API key. 
 You can learn more about getting such a key (for free!) here:</string>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
